bundle/tests/scorecard/kind-kuttl/ingress-manage-tls/00-certmanager-with-manage-tls.yaml
# Verify that manageTLS=true is enabled by default
apiVersion: apps.openliberty.io/v1
kind: OpenLibertyApplication
metadata:
  name: manage-tls-liberty
spec:
  applicationImage: icr.io/appcafe/open-liberty:full-java8-openj9-ubi
  replicas: 1
  expose: true
  service:
    port: 9443
  route:
    host: openlibertyoperator.test
    termination: reencrypt
