bundle/tests/scorecard/kind-kuttl/ingress-manage-tls/02-certmanager-with-manage-tls.yaml
apiVersion: apps.openliberty.io/v1
kind: OpenLibertyApplication
metadata:
  name: manage-tls-liberty
spec:
  applicationImage: icr.io/appcafe/open-liberty:full-java8-openj9-ubi
  replicas: 1
  expose: true
  manageTLS: true # Restore default
  service:
    port: 9443
  route:
    host: openlibertyoperator.test
    termination: reencrypt
