bundle/tests/scorecard/kind-kuttl/ingress-manage-tls/00-assert.yaml
# Check creation of CertManager certificates and secret
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  labels:
    app.kubernetes.io/managed-by: open-liberty-operator
spec:
  commonName: Open Liberty Operator
  isCA: true
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: manage-tls-liberty-svc-tls-cm
spec:
  secretName: manage-tls-liberty-svc-tls-cm
--- 
kind: Secret
apiVersion: v1
metadata:
  annotations:
    cert-manager.io/certificate-name: manage-tls-liberty-svc-tls-cm
  name: manage-tls-liberty-svc-tls-cm
---
# Verify the pod template spec uses *-cm naming convention
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manage-tls-liberty
status:
  replicas: 1
  readyReplicas: 1
  updatedReplicas: 1
spec:
  template:
    spec:
      containers:
      - env:
        - name: TLS_DIR
          value: /etc/x509/certs
        - name: SA_RESOURCE_VERSION
        - name: WLP_LOGGING_CONSOLE_LOGLEVEL
        - name: WLP_LOGGING_CONSOLE_SOURCE
        - name: WLP_LOGGING_CONSOLE_FORMAT
        - name: SEC_IMPORT_K8S_CERTS
        - name: SERVICE_CERT_SECRET_RESOURCE_VERSION
        volumeMounts:
        - name: svc-certificate
          mountPath: /etc/x509/certs
          readOnly: true
      volumes:
      - name: svc-certificate
        secret:
          defaultMode: 420
          secretName: manage-tls-liberty-svc-tls-cm
---
apiVersion: v1
kind: Service
metadata:
  name: manage-tls-liberty
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manage-tls-liberty
spec:
  rules:
    - host: openlibertyoperator.test
