bundle/tests/scorecard/kind-kuttl/ingress-manage-tls/05-assert.yaml
# Verify the pod template spec defaults and that secretName uses BYO secret
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: manage-tls-liberty
status:
  replicas: 1
  readyReplicas: 1
  updatedReplicas: 1
spec:
  template:
    spec:
      containers:
      - env:
        - name: TLS_DIR
          value: /etc/x509/certs
        - name: SA_RESOURCE_VERSION
        - name: WLP_LOGGING_CONSOLE_LOGLEVEL
        - name: WLP_LOGGING_CONSOLE_SOURCE
        - name: WLP_LOGGING_CONSOLE_FORMAT
        - name: SEC_IMPORT_K8S_CERTS
        - name: SERVICE_CERT_SECRET_RESOURCE_VERSION
        volumeMounts:
        - name: svc-certificate
          mountPath: /etc/x509/certs
          readOnly: true
        - name: pvc
          mountPath: /mnt/data
      volumes:
      - name: svc-certificate
        secret:
          defaultMode: 420
          secretName: byo-svc-secret
---
apiVersion: v1
kind: Service
metadata:
  name: manage-tls-liberty
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manage-tls-liberty
spec:
  tls:
    - hosts:
        - openlibertyoperator.test
      secretName: byo-route-secret
  rules:
    - host: openlibertyoperator.test
